@@ -1,0 +1,4 @@
+SET CHARACTER SET utf8;
+
+-- Version 1.3.04:
+INSERT INTO `cultibox`.`sensors` (`id`, `type`) VALUES (5, 0),(6, 0);
