@@ -105,7 +105,17 @@ $GLOBALS['REMOTE_DATABASE'] = "http://www.cbx.greenbox-botanic.com/index.php";
 $GLOBALS['WIFI_KEY_TYPE_LIST']=array("NONE", "WEP", "WPA", "WPA2", "WPA-AUTO");
 
 // List and equivalence between sensor number and type of the sensor from the index file:
-$GLOBALS['SENSOR_DEFINITION']=array("none","none","tem_humi","water_temp","none","wifi","water_level","water_level","ph","ec","od","orp");
-
-
+$GLOBALS['SENSOR_DEFINITION']=array(
+                                '0' => 'none',
+                                '1' => '',
+                                '2' => 'tem_humi',
+                                '3' => 'water_temp',
+                                '4' => '',
+                                '5' => 'wifi',
+                                '6' => 'water_level',
+                                '7' => 'water_level',
+                                '8' => 'ph',
+                                '9' => 'ec',
+                                ':' => 'od',
+                                ';' => 'orp');
 ?>
