@@ -8,6 +8,8 @@ Cultibox (1.3.06) precise; urgency=low
     + Ajout de la vérification à la saisie des valeurs pour les heures et les données rentrées dans le formulaire des programmes
     + Ajout de listes pour choisir la prise impactée par l'import ou l'export des programmes
     + Correction du lien du bouton permettant de passer d'un programme d'une prise à la configuration de la prise
+    + Mise à jour du fichier index pour accepter 6 capteurs
+    + Ajout de deux capteurs supplémentaires dans la table sensors
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Tue Apr 22 14:12:42 CEST 2014
 
